samples/_failures_safe/1761614901_10ee07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d29fbbb3.c: In function ‘handle_error’:
./samples/SAFE/__tmp_d29fbbb3.c:174:5: error: expected declaration or statement at end of input
  174 |     }
      |     ^
